# strix

./: .gitignore  .gitmodules  AUTHORS.md  CMakeLists.txt  Makefile  README.md
benchmarks/: README.md  evaluate_results.py  results_cav.csv  results_ltlsynt_2.5.csv  results_strix.csv  results_syntcomp2017.csv  run_benchmarks.sh  run_incremental_benchmark.sh  run_ltlsynt.sh
benchmarks/SYNTCOMP2016/: amba_case_study_2.tlsf
benchmarks/SYNTCOMP2017/: amba_decomposed_arbiter_2.ref.tlsf  amba_decomposed_arbiter_4.ref.tlsf  amba_decomposed_arbiter_6.tlsf  amba_decomposed_encode_10.ref.tlsf  amba_decomposed_encode_12.ref.tlsf  amba_decomposed_encode_2.ref.tlsf  amba_decomposed_encode_4.ref.tlsf  amba_decomposed_encode_6.ref.tlsf  amba_decomposed_encode_8.ref.tlsf  amba_decomposed_lock_10.ref.tlsf  amba_decomposed_lock_12.tlsf  amba_decomposed_lock_2.ref.tlsf  amba_decomposed_lock_6.ref.tlsf  amba_decomposed_lock_8.ref.tlsf  amba_decomposed_tburst4.ref.tlsf  amba_decomposed_tsingle.ref.tlsf  detector_10.tlsf  detector_12.tlsf  detector_4.tlsf  detector_6.tlsf  detector_8.tlsf  detector_unreal_12.tlsf  full_arbiter_2.tlsf  full_arbiter_3.tlsf  full_arbiter_4.tlsf  full_arbiter_5.tlsf  full_arbiter_6.tlsf  full_arbiter_7.tlsf  full_arbiter_unreal1_3_2.tlsf  full_arbiter_unreal1_3_4.tlsf  full_arbiter_unreal1_3_6.tlsf  genbuf2.tlsf  genbuf3.tlsf  genbuf4.tlsf  generalized_buffer_2.tlsf  generalized_buffer_3.tlsf  generalized_buffer_4.tlsf  lilydemo01.tlsf  lilydemo02.tlsf  lilydemo04.tlsf  (+105 more)
doc/: BUILDING.md  FORMATS.md  USAGE.md
lib/: CMakeLists.txt
lib/aiger/: CMakeLists.txt
scripts/: install_dependencies.sh  strix_tlsf.sh  verify.sh
src/: CMakeLists.txt  Definitions.h
src/aig/: AigerConstructor.cc  AigerConstructor.h  CMakeLists.txt
src/aut/: Automaton.cc  Automaton.h  CMakeLists.txt  ParityAutomatonTree.h  ParityAutomatonTreeBiconditionalNode.cc  ParityAutomatonTreeLeaf.cc  ParityAutomatonTreeNode.cc  ParityAutomatonTreeStructure.cc
src/ltl/: CMakeLists.txt  LTLParser.cc  LTLParser.h  Parser.cc  Parser.h  Specification.h
src/mealy/: CMakeLists.txt  MealyMachine.cc  MealyMachine.h
src/mealy/memin/: CMakeLists.txt  DIMACSWriter.cc  DIMACSWriter.h  Machine.h  MachineBuilder.cc  MachineBuilder.h  MeMin.cc  MeMin.h
src/pg/: CMakeLists.txt  PGArena.cc  PGArena.h  PGSISolver.cc  PGSISolver.h  PGSolver.cc  PGSolver.h
src/strix/: CMakeLists.txt  OptionParser.cc  OptionParser.h  main.cc
src/util/: Quine.h  SpecSeq.h  Timer.h
test/: CMakeLists.txt  run_tests.sh
test/tlsf/realizable/: amba_decomposed_arbiter.tlsf  amba_decomposed_decode.tlsf  amba_decomposed_encode.tlsf  amba_decomposed_lock.tlsf  amba_decomposed_shift.tlsf  amba_decomposed_tburst4.tlsf  amba_decomposed_tincr.tlsf  amba_decomposed_tsingle.tlsf  arbiter.tlsf  biconditional1.tlsf  biconditional2.tlsf  biconditional3.tlsf  biconditional4.tlsf  biconditional5.tlsf  biconditional6.tlsf  biconditional7.tlsf  biconditional8.tlsf  buchi_realizable.tlsf  cobuchi_realizable.tlsf  cosafety_realizable.tlsf  detector.tlsf  double_biconditional.tlsf  full_arbiter.tlsf  lilydemo03.tlsf  lilydemo04.tlsf  lilydemo05.tlsf  lilydemo06.tlsf  lilydemo07.tlsf  lilydemo08.tlsf  lilydemo09.tlsf  lilydemo10.tlsf  lilydemo12.tlsf  lilydemo13.tlsf  lilydemo14.tlsf  lilydemo17.tlsf  lilydemo18.tlsf  lilydemo19.tlsf  lilydemo20.tlsf  lilydemo21.tlsf  lilydemo22.tlsf  (+77 more)
test/tlsf/unrealizable/: biconditional_unreal.tlsf  buchi_unrealizable.tlsf  cobuchi_unrealizable.tlsf  cosafety_unrealizable.tlsf  detector_unreal.tlsf  false.tlsf  full_arbiter_unreal1.tlsf  full_arbiter_unreal2.tlsf  lilydemo01.tlsf  lilydemo02.tlsf  lilydemo11.tlsf  lilydemo15.tlsf  lilydemo16.tlsf  load_balancer_unreal1.tlsf  ltl2dba27.tlsf  ltl2dba_theta.tlsf  memory_counterstrategy.tlsf  prioritized_arbiter_unreal1.tlsf  prioritized_arbiter_unreal2.tlsf  round_robin_arbiter_unreal2.tlsf  safety_unrealizable.tlsf  simple_arbiter_unreal1.tlsf  simple_arbiter_unreal2.tlsf  trivially_unrealizable.tlsf  unused.tlsf
